[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/Montserrat-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://menu/menu_theme.tres" type="Theme" id=2]
[ext_resource path="res://fonts/Montserrat-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://global/pause_menu/PauseMenu.gd" type="Script" id=5]

[sub_resource type="ShaderMaterial" id=4]

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 3 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blur" type="ColorRect" parent="."]
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0666667, 0.0666667, 0.0666667, 0.941176 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 660.0
margin_top = 309.0
margin_right = 1260.0
margin_bottom = 771.0
custom_constants/separation = 100

[node name="Paused" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
margin_right = 600.0
margin_bottom = 72.0
rect_min_size = Vector2( 0, 72 )
theme = ExtResource( 2 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center][wave amp=30 freq=3]Paused[/wave][/center]"
text = "Paused"
scroll_active = false

[node name="ButtonContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 172.0
margin_right = 600.0
margin_bottom = 462.0
custom_constants/separation = 40

[node name="Resume" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
margin_right = 600.0
margin_bottom = 70.0
rect_min_size = Vector2( 600, 70 )
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Resume"

[node name="Restart" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
margin_top = 110.0
margin_right = 600.0
margin_bottom = 180.0
rect_min_size = Vector2( 600, 70 )
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Restart Section"

[node name="ExitSection" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
margin_top = 220.0
margin_right = 600.0
margin_bottom = 290.0
rect_min_size = Vector2( 600, 70 )
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Return to Module Menu"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonContainer/ExitSection" to="." method="_on_ExitSection_pressed"]
